--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <h2 class="footer__title">
                 
-                <a href="#" class="footer__content">
+                <a href="https://qudratulloh.netlify.app/" class="footer__content">
                     <i class="far fa-copyright fa-flip"></i> Qudratulloh Mahammadjonov | 2022
                 </a>
                     
